@@ -1214,6 +1214,8 @@ mbstreamreader_iread(MultibyteStreamReaderObject *self,
 	cres = NULL;
 
 	for (;;) {
+		int endoffile;
+
 		if (sizehint < 0)
 			cres = PyObject_CallMethod(self->stream,
 					(char *)method, NULL);
@@ -1229,6 +1231,8 @@ mbstreamreader_iread(MultibyteStreamReaderObject *self,
 					"non-string object");
 			goto errorexit;
 		}
+
+		endoffile = (PyString_GET_SIZE(cres) == 0);
 
 		if (self->pendingsize > 0) {
 			PyObject *ctr;
@@ -1257,7 +1261,7 @@ mbstreamreader_iread(MultibyteStreamReaderObject *self,
 				(MultibyteStatefulDecoderContext *)self, &buf))
 			goto errorexit;
 
-		if (rsize == 0 || sizehint < 0) { /* end of file */
+		if (endoffile || sizehint < 0) {
 			if (buf.inbuf < buf.inbuf_end &&
 			    multibytecodec_decerror(self->codec, &self->state,
 					&buf, self->errors, MBERR_TOOFEW))
